# reservation

./: .env
abi/: Cargo.toml  build.rs
abi/protos/: a.py  reservation.proto
abi/src/: config.rs  error.rs  lib.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: mod.rs  reservation.rs  reservation_query.rs  reservation_status.rs
migrations/: 20231226151704_init.down.sql  20231226151704_init.up.sql  20231226153209_reservation.down.sql  20231226153209_reservation.up.sql  20231226153553_reservation_trigger.down.sql  20231226153553_reservation_trigger.up.sql  20231226153854_reservation_func.up.sql  20231231070004_a.down.sql  20231231070004_a.up.sql
reservation/: Cargo.toml
reservation/src/: lib.rs  manager.rs
rfcs/: 0001-core-reservation  0001-core-reservation.md  template.md
rfcs/images/: reservation-arch.excalidraw
service/: Cargo.toml
service/fixtures/: config.yml
service/src/: config.rs  lib.rs  main.rs
