[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
prost = "0.12.3"
prost-types = "0.12.3"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tonic = { version = "0.10.2", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.10.2"
